# url_shortcuts

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 124973340d5b_.py  184fae9bcdee_.py  2488a6b5dfcf_.py  5c62590a1b11_.py  959175814ebf_.py  963341045ea3_.py  b4d1f18a31fe_.py  bf54cd1aee50_.py  ebfcd33000ce_.py  ff6e2d2d99eb_.py
tests/: test_url_shortcuts.py
url_shortcuts/: __init__.py  forms.py  models.py
url_shortcuts/static/js/: actions.js  button_events.js  checkboxhide.js  flash.js  redirect.js
url_shortcuts/templates/: 404.html  _pagination.html  base.html  dashboard.html  get_pass.html  index.html  login.html  redirect.html  registration.html
