[tool.poetry]
name = "url_shortcuts"
version = "0.1.0"
description = ""
authors = ["silenmode0n <as.makar@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
qrcode = "^7.3.1"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
